Fix Pagination alignment (#630)

--- a/src/components/pagination/pagination.mat.styl
+++ b/src/components/pagination/pagination.mat.styl
@@ -1,5 +1,5 @@
 .q-pagination
-  display inline-block
+  display inline-flex
   input
     text-align center
     -moz-appearance textfield
